# ASR_local

./: .gitignore  README.md  STATE.md  pyproject.toml
_asr_main_conflicts/: README.md
_asr_main_conflicts/from_ASR_main_20260708/: .gitignore  README.md
_works/: README.md  note.md
_works/00_daily/: 202607.md
_works/00_general/: 00_git_setup.md  01_py_module.md
_works/02_fastconformer_finetune/: 01_exp_idea.md  02_issue.md  03_ctc_epoch22_trial.md
configs/: _base.yaml  _smoke.yaml  s1_clean.yaml  s2_natural.yaml  s3_conversational.yaml  s3_rebuild_vocab.yaml  s4_vocabexp.yaml  s5_vocabexp_full.yaml
deploy/asr_vi/: README.md  _common.py  eval_wer.py  infer.py
deploy/hf/: model_card.md  publish.py
deploy/kaggle/: accounts.example.json
docs/: 00_INDEX.md  01_setup_cpu.md
docs/02_asr_components/: 00_INDEX.md  01_pipeline_overview.md  02_tokenizer.md  03_audio_to_mel.md  04_specaugment.md  05_encoder_conformer.md  06_decode_ctc.md  07_decode_rnnt.md  08_decode_aed.md  09_evaluation_wer.md
docs/03_models/: 00_INDEX.md
docs/04_datasets_vi/: 00_INDEX.md  01_common_voice_vi.md  02_vivos.md  03_fosd_fpt.md  04_vlsp2020.md  05_vietbud500.md  06_lsvsc.md  07_vietsuperspeech.md  08_infore.md  09_phoaudiobook.md
docs/05_datasets_en/: 00_INDEX.md  01_nemo_sample_wav.md  (+5 more)
experiments/: README.md  _PROTOCOL.md  _RUN_QUEUE.md  _RUN_STANDARD.md  _SCOREBOARD.md
insight/: README.md
notebooks/: 01_explore_model_config.ipynb  README.md  benchmarking.ipynb
reports/: 01_fastconformer_ctc_v2norm.md  README.md
src/: sitecustomize.py
tests/: test_normalize_vi.py
(+139 files in other folders)
